Object List Ordering
Created system for ordering the object list to find specific objects easier. Also reorganized some network messages and the way textures are loaded. Bullets are currently invisible.